[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/City.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/Objects/seta.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Objects/papel_pautado_a4.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Ui/botao_press.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Wind.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sprites/Ui/botao_hover.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Turbine.tscn" type="PackedScene" id=7]
[ext_resource path="res://Sprites/Ui/botao.png" type="Texture" id=8]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 128.333, 140 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 800, 800 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 800, 800 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 800, 800 )

[node name="Game" type="Node2D"]
script = ExtResource( 9 )

[node name="Bakcground" type="Sprite" parent="."]
position = Vector2( 399, 400.46 )
scale = Vector2( 0.707965, 0.495575 )
texture = ExtResource( 3 )

[node name="City" parent="." instance=ExtResource( 1 )]
position = Vector2( 260, 620 )

[node name="Turbine" parent="." instance=ExtResource( 7 )]
position = Vector2( 512, 336 )
frame = 0

[node name="Notes" type="Node2D" parent="."]

[node name="Left" type="Sprite" parent="Notes"]
position = Vector2( 80, 100 )
rotation = 1.5708
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="area" type="Area2D" parent="Notes/Left"]

[node name="shape" type="CollisionShape2D" parent="Notes/Left/area"]
rotation = -7.10543e-15
shape = SubResource( 1 )
disabled = true

[node name="left_timer" type="Timer" parent="Notes/Left"]
wait_time = 0.05

[node name="Down" type="Sprite" parent="Notes"]
position = Vector2( 230, 100 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="area" type="Area2D" parent="Notes/Down"]

[node name="shape" type="CollisionShape2D" parent="Notes/Down/area"]
position = Vector2( -23.3333, 1.66669 )
rotation = -7.10543e-15
shape = SubResource( 1 )
disabled = true

[node name="down_timer" type="Timer" parent="Notes/Down"]
wait_time = 0.05

[node name="Up" type="Sprite" parent="Notes"]
position = Vector2( 380, 100 )
rotation = 3.14159
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="area" type="Area2D" parent="Notes/Up"]

[node name="shape" type="CollisionShape2D" parent="Notes/Up/area"]
rotation = -1.42109e-14
shape = SubResource( 1 )
disabled = true

[node name="up_timer" type="Timer" parent="Notes/Up"]
wait_time = 0.05

[node name="Right" type="Sprite" parent="Notes"]
position = Vector2( 530, 100 )
rotation = -1.5708
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="area" type="Area2D" parent="Notes/Right"]
rotation = 7.10543e-15

[node name="shape" type="CollisionShape2D" parent="Notes/Right/area"]
rotation = -7.10543e-15
shape = SubResource( 1 )
disabled = true

[node name="right_timer" type="Timer" parent="Notes/Right"]
wait_time = 0.05

[node name="timers" type="Node" parent="."]

[node name="timer_l" type="Timer" parent="timers"]

[node name="timer_d" type="Timer" parent="timers"]

[node name="timer_u" type="Timer" parent="timers"]

[node name="timer_r" type="Timer" parent="timers"]

[node name="Wind" parent="." instance=ExtResource( 5 )]
position = Vector2( 163, 284 )
scale = Vector2( 0.4, 0.4 )

[node name="Button" type="Button" parent="."]
margin_left = 536.0
margin_top = 509.0
margin_right = 710.0
margin_bottom = 601.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_shape_entered" from="Notes/Left/area" to="." method="_on_area_area_shape_entered"]
[connection signal="timeout" from="Notes/Left/left_timer" to="." method="_on_left_timer_timeout"]
[connection signal="area_shape_entered" from="Notes/Down/area" to="." method="_on_area_area_shape_entered"]
[connection signal="timeout" from="Notes/Down/down_timer" to="." method="_on_down_timer_timeout"]
[connection signal="area_shape_entered" from="Notes/Up/area" to="." method="_on_area_area_shape_entered"]
[connection signal="timeout" from="Notes/Up/up_timer" to="." method="_on_up_timer_timeout"]
[connection signal="area_shape_entered" from="Notes/Right/area" to="." method="_on_area_area_shape_entered"]
[connection signal="timeout" from="Notes/Right/right_timer" to="." method="_on_right_timer_timeout"]
[connection signal="timeout" from="timers/timer_l" to="." method="_on_timer_l_timeout"]
[connection signal="timeout" from="timers/timer_d" to="." method="_on_timer_d_timeout"]
[connection signal="timeout" from="timers/timer_u" to="." method="_on_timer_u_timeout"]
[connection signal="timeout" from="timers/timer_r" to="." method="_on_timer_r_timeout"]
